--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
-      <title>记一记</title>
+      <title>天天记账</title>
   </head>
   <body>
     <div id="app"></div>
